--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.0.0-alpha.4",
-    "vue": "^3.2.16"
+    "axios": "^0.23.0",
+    "vue": "^3.2.16",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
