--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "server-dev": "node server/index.js 3002",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview"
   },
   "dependencies": {
     "ant-design-vue": "^3.0.0-alpha.4",
     "axios": "^0.23.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.1",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
+    "sass": "^1.43.3",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
     "vue-tsc": "^0.3.0"
